--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -32,5 +32,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Workflow on dev brangh
+          echo Workflow on dev branch
           echo $GITHUB_SHA
