--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,9 +6,8 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ wf1 ]
-  pull_request:
-    branches: [ wf1 ]
+    branches: 
+    - feature/docker1.3
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
