--- a/.github/workflows/relci.yml
+++ b/.github/workflows/relci.yml
@@ -1,14 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: DevCI
+name: ReleaseCI
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ release/1.0.1 ]
+    branches: [ release/* ]
   pull_request:
-    branches: [ release/1.0.1 ]
+    branches: [ release/* ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
