get branch in ci

--- a/.github/workflows/relci.yml
+++ b/.github/workflows/relci.yml
@@ -33,4 +33,5 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo Workflow on dev branch
+          echo $env.BRANCH
           echo $GITHUB_SHA
