--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -25,12 +25,6 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       
-      - uses: bhowell2/github-substring-action
-        id: commitIdShort
-        with:
-         value: $GITHUB_SHA
-         length_from_end: 6
-
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
@@ -40,4 +34,4 @@ jobs:
         run: |
           echo Workflow on dev branch
           echo $GITHUB_SHA
-          echo steps.commitIdShort.outputs.substring
+          echo ${GITHUB_SHA::7}
