--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -28,10 +28,13 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
-
+      - name: Add SHORT_SHA env property with commit short sha
+        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+      
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Workflow on dev branch
           echo $GITHUB_SHA
           echo ${GITHUB_SHA::7}
+          echo ${SHORT_SHA}
