--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -35,6 +35,14 @@ jobs:
       - name: Add SHORT_SHA env property with bash cut
         run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV   
         
+      - name: Set Dev env    
+        if: github.ref == 'refs/heads/dev'
+        run: |
+          echo 'Run section in dev section'
+          env:
+            DOCKER_TAG: ${{SHORT_COMMIT_SHA}}
+          echo ${{DOCKER_TAG}}     
+        
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
