--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -37,11 +37,8 @@ jobs:
         
       - name: Set Dev env    
         if: github.ref == 'refs/heads/dev'
-        run: |
-          echo 'Run section in dev section'
-          env:
+        env:
             DOCKER_TAG: ${{SHORT_COMMIT_SHA}}
-          echo ${{DOCKER_TAG}}     
         
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
@@ -51,6 +48,7 @@ jobs:
           echo ${GITHUB_SHA::7}
           echo ${SHORT_SHA}
           echo ${SHORT_COMMIT_SHA}
+          echo ${DOCKER_TAG}
       
       - name: If dev    
         if: github.ref == 'refs/heads/dev'
