--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Set Dev env    
         if: github.ref == 'refs/heads/dev'
         env:
-            DOCKER_TAG: ${{SHORT_COMMIT_SHA}}
+            DOCKER_TAG: devtag
         
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
