--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -34,11 +34,10 @@ jobs:
         
       - name: Add SHORT_SHA env property with bash cut
         run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV   
-        
-      - name: Set Dev env    
-        if: github.ref == 'refs/heads/dev'
         env:
-            DOCKER_TAG: devtag
+            DOCKER_TAG: ${{SHORT_SHA}}
+      #if: github.ref == 'refs/heads/dev'
+      
         
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
@@ -48,6 +47,7 @@ jobs:
           echo ${GITHUB_SHA::7}
           echo ${SHORT_SHA}
           echo ${SHORT_COMMIT_SHA}
+          echo DOCKER TAG:
           echo ${DOCKER_TAG}
       
       - name: If dev    
