--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -33,14 +33,12 @@ jobs:
         run: echo "SHORT_COMMIT_SHA=`echo ${GITHUB_SHA::8}`" >> $GITHUB_ENV
         
       - name: Add SHORT_SHA env property with bash cut
-        run: |
-          echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-12`" >> $GITHUB_ENV   
-          echo ${SHORT_SHA}
-          echo ${DOCKER_TAG}
+        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-12`" >> $GITHUB_ENV   
+      
+      - name: Set dev env
+        if: github.ref == 'refs/heads/dev'
         env:
             DOCKER_TAG: ${{env.SHORT_COMMIT_SHA}}
-      #if: github.ref == 'refs/heads/dev'
-      
         
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
