--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -37,8 +37,9 @@ jobs:
       
       - name: Set dev env
         if: github.ref == 'refs/heads/dev'
-        run: |
-          env:
+        run: 
+          echo 'set dev env'
+        env:
             DOCKER_TAG: ${{env.SHORT_COMMIT_SHA}}
         
       # Runs a set of commands using the runners shell
