--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -37,8 +37,7 @@ jobs:
       
       - name: Set dev env
         if: github.ref == 'refs/heads/dev'
-        run: 
-          echo 'set dev env'
+        run: echo 'set dev env'
         env:
             DOCKER_TAG: ${{env.SHORT_COMMIT_SHA}}
         
