--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -37,7 +37,24 @@ jobs:
       
       - name: Set dev env
         if: github.ref == 'refs/heads/dev'
-        run: echo "DOCKER_TAG= ${{env.SHORT_COMMIT_SHA}}" >> $GITHUB_ENV  
+        run: |
+          echo "DOCKER_TAG = ${{env.SHORT_COMMIT_SHA}}" >> $GITHUB_ENV  
+          echo "CONTAINER_NAME = containerdev" >> $GITHUB_ENV  
+          echo "DNS_NAME= nodementordev" >> $GITHUB_ENV  
+        
+      - name: Set release env
+        if: contain(github.ref,'release')
+        run: |
+          echo "DOCKER_TAG = release" >> $GITHUB_ENV  
+          echo "CONTAINER_NAME = releasecontainer" >> $GITHUB_ENV  
+          echo "DNS_NAME= nodementorrelease" >> $GITHUB_ENV          
+    
+      - name: Set master env
+        if: contain(github.ref,'master')
+        run: |
+          echo "DOCKER_TAG = latest" >> $GITHUB_ENV  
+          echo "CONTAINER_NAME = prodcontainer" >> $GITHUB_ENV  
+          echo "DNS_NAME= nodementorrelease" >> $GITHUB_ENV         
         
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
@@ -47,8 +64,10 @@ jobs:
           echo ${GITHUB_SHA::7}
           echo ${SHORT_SHA}
           echo ${SHORT_COMMIT_SHA}
-          echo DOCKER TAG:
+          echo 'branch variables:'
           echo ${DOCKER_TAG}
+          echo ${CONTAINER_NAME}
+          echo ${DNS_NAME}
       
       - name: If dev    
         if: github.ref == 'refs/heads/dev'
