--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -52,9 +52,9 @@ jobs:
       - name: Set dev env
         if: github.ref == 'refs/heads/dev'
         run: |
-          echo "AZCONTAINER_NAME = containerdev" >> $GITHUB_ENV  
-          #echo "DNS_NAME= nodementordev" >> $GITHUB_ENV  
-          #echo "DOCKER_TAG = ${{env.SHORT_COMMIT_SHA}}" >> $GITHUB_ENV         
+          echo "AZCONTAINER_NAME= containerdev" >> $GITHUB_ENV  
+          echo "DNS_NAME= nodementordev" >> $GITHUB_ENV  
+          echo "DOCKER_TAG= ${{env.SHORT_COMMIT_SHA}}" >> $GITHUB_ENV         
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
