--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,15 +1,16 @@
 # This is a basic workflow to help you get started with Actions
 
-name: DevCI
+name: Single wf file for all branches
 
 # Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the master branch
+on: 
   push:
-    branches: [ dev ]
   pull_request:
-    branches: [ dev ]
-
+    branches: 
+      - master
+      - 'releases/**'
+      - dev
+      
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
