--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -40,15 +40,15 @@ jobs:
         if: contains(github.ref,'release')
         run: |
           echo "DOCKER_TAG= release" >> $GITHUB_ENV  
-          echo "CONTAINER_NAME= releasecontainer" >> $GITHUB_ENV  
+          echo "CONTAINER_NAME= containerrelease" >> $GITHUB_ENV  
           echo "DNS_NAME= nodementorrelease" >> $GITHUB_ENV          
     
       - name: Set master env
         if: contains(github.ref,'master')
         run: |
           echo "DOCKER_TAG= latest" >> $GITHUB_ENV  
-          echo "CONTAINER_NAME= prodcontainer" >> $GITHUB_ENV  
-          echo "DNS_NAME= nodementorrelease" >> $GITHUB_ENV         
+          echo "CONTAINER_NAME= containerprod" >> $GITHUB_ENV  
+          echo "DNS_NAME= nodementor" >> $GITHUB_ENV         
         
       - name: Set dev env
         if: github.ref == 'refs/heads/dev'
@@ -69,14 +69,3 @@ jobs:
           echo ${{env.CONTAINER_NAME}}
           echo ${{env.DNS_NAME}}
       
-      - name: If dev    
-        if: github.ref == 'refs/heads/dev'
-        run: |
-          echo 'dev'
-          echo ${{github.ref}}
-      
-      - name: If master   
-        if: github.ref == 'refs/heads/master'
-        run: |
-          echo 'master'
-          echo ${{github.ref}}
