--- a/.github/workflows/testrelease.yml
+++ b/.github/workflows/testrelease.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Single wf file for all branches
+name: test release name
 
 # Controls when the workflow will run
 on: 
@@ -69,4 +69,6 @@ jobs:
           echo ${{env.DOCKER_TAG}}
           echo ${{env.CONTAINER_NAME}}
           echo ${{env.DNS_NAME}}
+          echo ${{GITHUB_REF_NAME}}
+          
       
