--- a/.github/workflows/testrelease.yml
+++ b/.github/workflows/testrelease.yml
@@ -70,5 +70,6 @@ jobs:
           echo ${{env.CONTAINER_NAME}}
           echo ${{env.DNS_NAME}}
           echo ${GITHUB_REF_NAME}
+          echo ${GITHUB_REF}
           
       
