--- a/.github/workflows/testrelease.yml
+++ b/.github/workflows/testrelease.yml
@@ -71,5 +71,5 @@ jobs:
           echo ${{env.DNS_NAME}}
           echo ${GITHUB_REF_NAME}
           echo ${GITHUB_REF}
-          
+          echo ${GITHUB_REF##*/}
       
